Finalized Block Details

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Време за генериране на блок",
   "block_height": "Височина на блока",
   "block_id": "ID на блок",
+  "block_reward": "Блокирайте награда",
   "block_signature": "Блок подпис",
   "block_timestamp": "Блок времеви маркер",
   "blocks": "Блокове",
+  "blocks_details": "Подробности за блока",
   "bookmark_asset": "Маркирайте този актив",
   "broadcast": "Излъчване",
   "broadcast_transaction": "Излъчване на сделката",
@@ -476,6 +478,8 @@
   "generated_token_is": "Генерираният маркер е: ",
   "generation_signature": "Създаване на подпис",
   "generator": "Генератор",
+  "generator_address": "Адрес на генератора",
+  "generator_id": "ID на генератора",
   "generator_public_key": "Генератор публичен ключ",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Дайте обратна връзка",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Няма сделки в този блок.",
   "no_transactions_yet": "Все още няма сделки.",
   "non_verified_source": "Неизвестен, потенциално несигурен източник",
+  "nonce": "дадения случай",
   "none": "Няма",
   "not_delivered_in_time": "Не доставен навреме",
   "not_forging": "Не кове",
@@ -647,6 +652,7 @@
   "nr_votes": "# Гласа",
   "number_of_trades": "Брой сделки",
   "number_of_transactions": "Брой сделки",
+  "number_transactions": "Брой транзакции",
   "numeric_account_id": "Цифрова сметка ID",
   "official_hash": "Официален хеш",
   "old_browser_warning": "Вие използвате стар браузър, който не поддържа това приложение.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Връщащ се потребител?",
   "reward_recipient": "Награда Получател",
   "same_out": "Same Amount",
+  "scoop_num": "Номер на лъжичка",
   "search_aliases": "Търси псевдоними...",
   "search_assets": "Търси активи...",
   "search_by_id": "Търсене по ID...",
