--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Temps de generació del Bloc",
   "block_height": "Alçada del bloc",
   "block_id": "Identificador de bloc",
+  "block_reward": "Bloc recompensa",
   "block_signature": "Signatura del Bloc",
   "block_timestamp": "Marca de Temps del Bloc",
   "blocks": "Blocs",
+  "blocks_details": "Detalls del bloc",
   "bookmark_asset": "Afegir a Favorits aquest Actiu",
   "broadcast": "Transmetre",
   "broadcast_transaction": "Transmetre la Transacció",
@@ -476,6 +478,8 @@
   "generated_token_is": "El Token generat és: ",
   "generation_signature": "Generació de la signatura",
   "generator": "Generador",
+  "generator_address": "Adreça del generador",
+  "generator_id": "ID del generador",
   "generator_public_key": "Generar Clau Pública",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Fes-nos comentaris",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Cap transacció en aquest bloc.",
   "no_transactions_yet": "Encara no hi ha cap transacció.",
   "non_verified_source": "Font desconeguda i potencialment insegura",
+  "nonce": "Nonce",
   "none": "Cap",
   "not_delivered_in_time": "No lliurat a temps",
   "not_forging": "sense Forjar",
@@ -647,6 +652,7 @@
   "nr_votes": "# Vots",
   "number_of_trades": "Nombre d'opereacions",
   "number_of_transactions": "Nombre de Transaccions",
+  "number_transactions": "Nombre d’operacions",
   "numeric_account_id": "Numèric ID del Compte",
   "official_hash": "Hash Oficial",
   "old_browser_warning": "Esteu utilitzant un navegador antic que no és compatible amb aquesta aplicació.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Usuari existent?",
   "reward_recipient": "Destinatari de recompensa",
   "same_out": "Same Amount",
+  "scoop_num": "Número d’escola",
   "search_aliases": "Cercar Àlies...",
   "search_assets": "Cercar Actius...",
   "search_by_id": "Cercar per ID...",
