--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Doba generování bloku",
   "block_height": "Výška bloku",
   "block_id": "ID bloku",
+  "block_reward": "Blokovat odměnu",
   "block_signature": "Podpis bloku",
   "block_timestamp": "Časové razítko bloku",
   "blocks": "Bloky",
+  "blocks_details": "Detaily bloku",
   "bookmark_asset": "Přidat aktivum do záložek",
   "broadcast": "Vysílat",
   "broadcast_transaction": "Vysílat transakci",
@@ -476,6 +478,8 @@
   "generated_token_is": "Vygenerovaný token je: ",
   "generation_signature": "Generování podpisu",
   "generator": "Generátor",
+  "generator_address": "Adresa generátoru",
+  "generator_id": "ID generátoru",
   "generator_public_key": "Generátor veřejného klíče",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Poskytnout zpětnou vazbu",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Žádné transakce v tomto bloku.",
   "no_transactions_yet": "Doposud žádné transakce.",
   "non_verified_source": "Neznámý, potenciálně nezabezpečený zdroj",
+  "nonce": "Nonce",
   "none": "Žádný",
   "not_delivered_in_time": "Není doručena včas",
   "not_forging": "Kování vypnuto",
@@ -647,6 +652,7 @@
   "nr_votes": "Počet hlasů",
   "number_of_trades": "Počet obchodů",
   "number_of_transactions": "Počet transakcí",
+  "number_transactions": "Počet transakcí",
   "numeric_account_id": "Číselné ID účtu",
   "official_hash": "Oficiální hash",
   "old_browser_warning": "Používáte zastaralý prohlížeč, který nepodporuje tuto aplikaci.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Stávající uživatel?",
   "reward_recipient": "Příjemce odměny",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop Number",
   "search_aliases": "Hledat aliasy...",
   "search_assets": "Hledat aktiva...",
   "search_by_id": "Hledat podle ID...",
