--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Durchschnittliche Blockdauer",
   "block_height": "Blockhöhe",
   "block_id": "Block ID",
+  "block_reward": "Block Belohnung",
   "block_signature": "Blocksignatur",
   "block_timestamp": "Blockzeitpunkt",
   "blocks": "Blöcke",
+  "blocks_details": "Details blockieren",
   "bookmark_asset": "Fügen Sie dieses Asset den Lesezeichen hinzu",
   "broadcast": "Veröffentlichen",
   "broadcast_transaction": "Transaktion veröffentlichen",
@@ -476,6 +478,8 @@
   "generated_token_is": "Das generierte Token lautet:",
   "generation_signature": "Generierungshash",
   "generator": "Generator",
+  "generator_address": "Generatoradresse",
+  "generator_id": "Generator ID",
   "generator_public_key": "Öffentlicher Schlüssel des Generierers",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Feedback geben",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Keine Transaktionen in diesem Block.",
   "no_transactions_yet": "Noch keine Transaktionen.",
   "non_verified_source": "Unbekannte, möglicherweise unsichere Quelle",
+  "nonce": "Nonce",
   "none": "Keine",
   "not_delivered_in_time": "Nicht rechtzeitig geliefert",
   "not_forging": "Keine Blockgenerierung",
@@ -647,6 +652,7 @@
   "nr_votes": "# Stimmen",
   "number_of_trades": "Anzahl der Trades",
   "number_of_transactions": "Anzahl der Transaktionen",
+  "number_transactions": "Anzahl der Transaktionen",
   "numeric_account_id": "Numerische Konto-ID",
   "official_hash": "Offizieller Hash",
   "old_browser_warning": "Sie benutzen einen alten Browser, den diese Anwendung nicht unterstützt.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Konto bereits vorhanden?",
   "reward_recipient": "Belohnungsempfänger",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop-Nummer",
   "search_aliases": "Suche Aliasse...",
   "search_assets": "Suche Assets...",
   "search_by_id": "Suche nach ID...",
