--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Hora de Generación del Bloque",
   "block_height": "Altura del bloque",
   "block_id": "ID de bloque",
+  "block_reward": "Recompensa de bloque",
   "block_signature": "Firma del Bloque",
   "block_timestamp": "Marca de Tiempo del Bloque",
   "blocks": "Bloques",
+  "blocks_details": "Detalles del bloque",
   "bookmark_asset": "Añadir Activo a Favoritos",
   "broadcast": "Transmitir",
   "broadcast_transaction": "Transmitir Transacción",
@@ -476,6 +478,8 @@
   "generated_token_is": "El identificador generado es:",
   "generation_signature": "Firma de Generación",
   "generator": "Generador",
+  "generator_address": "Dirección del generador",
+  "generator_id": "ID del generador",
   "generator_public_key": "Clave Pública del Generador",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Dejar Valoración",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Ninguna transacción en este bloque.",
   "no_transactions_yet": "Aún no hay transacciones.",
   "non_verified_source": "Desconocida, fuente potencialmente insegura.",
+  "nonce": "Mientras tanto",
   "none": "Ninguno",
   "not_delivered_in_time": "No entregado a tiempo",
   "not_forging": "Sin Forjar",
@@ -647,6 +652,7 @@
   "nr_votes": "# Votos",
   "number_of_trades": "Número de Operaciones",
   "number_of_transactions": "Número de Transacciones",
+  "number_transactions": "Número de transacciones",
   "numeric_account_id": "ID Numérica de Cuenta",
   "official_hash": "Hash Oficial",
   "old_browser_warning": "Usted está usando un navegador antiguo no soportado por esta aplicación.",
@@ -764,6 +770,7 @@
   "returning_user_q": "¿Usuario existente?",
   "reward_recipient": "Recipiente Recompensa",
   "same_out": "Same Amount",
+  "scoop_num": "Número de Scoop",
   "search_aliases": "Búsqueda de Alias...",
   "search_assets": "Búsqueda de Activos...",
   "search_by_id": "Búsqueda Por ID...",
