--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Hora de xeración do bloque",
   "block_height": "Altura do bloque",
   "block_id": "ID de bloqueo",
+  "block_reward": "Bloquear recompensa",
   "block_signature": "Firma do bloque",
   "block_timestamp": "Marca de tempo do bloque",
   "blocks": "Bloques",
+  "blocks_details": "Detalles do bloque",
   "bookmark_asset": "Engadir activo a favoritos",
   "broadcast": "Transmitir",
   "broadcast_transaction": "Transacción Transmitida",
@@ -476,6 +478,8 @@
   "generated_token_is": "O identificador xerado é:",
   "generation_signature": "Firma de xeración",
   "generator": "Xerador",
+  "generator_address": "Enderezo do xerador",
+  "generator_id": "ID do xerador",
   "generator_public_key": "Crave pública do xerador",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Deixar valoración",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Ningunha transacción neste bloque.",
   "no_transactions_yet": "Aínda non hai transaccións.",
   "non_verified_source": "Fonte descoñecida e potencialmente insegura",
+  "nonce": "Nonce",
   "none": "None",
   "not_delivered_in_time": "Non enviado en tempo",
   "not_forging": "Sen Forxar",
@@ -647,6 +652,7 @@
   "nr_votes": "# Votos",
   "number_of_trades": "Número de operacións",
   "number_of_transactions": "Número de Transaccións",
+  "number_transactions": "Número de transaccións",
   "numeric_account_id": "Numeric Account ID",
   "official_hash": "Hash oficial",
   "old_browser_warning": "Vostede está empregando un navegador antiguo que non é soportado por esta aplicación.",
@@ -764,6 +770,7 @@
   "returning_user_q": "¿Usuario existente?",
   "reward_recipient": "Destinatario de recompensa",
   "same_out": "Same Amount",
+  "scoop_num": "Número de Scoop",
   "search_aliases": "Búsqueda de Alias...",
   "search_assets": "Búsqueda de activos...",
   "search_by_id": "Búsqueda por ID...",
