--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Vrijeme generiranja bloka",
   "block_height": "Visina bloka",
   "block_id": "ID bloka",
+  "block_reward": "Blokiraj nagradu",
   "block_signature": "Potpis bloka",
   "block_timestamp": "Oznaka vremena bloka",
   "blocks": "Blokovi",
+  "blocks_details": "Detalji bloka",
   "bookmark_asset": "Dodaj asset u oznake",
   "broadcast": "odašiljaj",
   "broadcast_transaction": "Emitiraj transakciju",
@@ -476,6 +478,8 @@
   "generated_token_is": "Generirani token je:",
   "generation_signature": "Generiranje potpisa",
   "generator": "Generator",
+  "generator_address": "Adresa generatora",
+  "generator_id": "ID generatora",
   "generator_public_key": "Generator javnog ključa",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Povratna informacija",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Nema transakcija u ovom bloku.",
   "no_transactions_yet": "Još uvijek bez transakcija.",
   "non_verified_source": "Nepoznati, potencijalno nesiguran izvor",
+  "nonce": "nPo",
   "none": "Ništa",
   "not_delivered_in_time": "Nije isporučeno na vrijeme",
   "not_forging": "Kovanje nije započeto",
@@ -647,6 +652,7 @@
   "nr_votes": "# Glasovi",
   "number_of_trades": "Broj trgovanja",
   "number_of_transactions": "Broj transakcija",
+  "number_transactions": "Broj transakcija",
   "numeric_account_id": "Numerički ID Računa",
   "official_hash": "Službeni hash",
   "old_browser_warning": "Koristite stari web preglednik koji ova aplikacija ne podržava.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Korisnik povratnik?",
   "reward_recipient": "Nagrađeni primatelj",
   "same_out": "Same Amount",
+  "scoop_num": "Broj Scoop",
   "search_aliases": "Traži pseudonime...",
   "search_assets": "Traži Assete...",
   "search_by_id": "Pretraživanje prema ID...",
