--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -99,9 +99,11 @@
   "block_generation_time": "ブロックの生成時間",
   "block_height": "ブロックの高さ",
   "block_id": "ブロックID",
+  "block_reward": "ブロック報酬",
   "block_signature": "ブロックの署名",
   "block_timestamp": "ブロックのタイムスタンプ",
   "blocks": "ブロック",
+  "blocks_details": "ブロック詳細",
   "bookmark_asset": "この資産をブックマーク",
   "broadcast": "ブロードキャスト",
   "broadcast_transaction": "トランザクションをブロードキャスト",
@@ -476,6 +478,8 @@
   "generated_token_is": "生成されたトークンは：",
   "generation_signature": "署名発行",
   "generator": "ジェネレーター",
+  "generator_address": "発電機アドレス",
+  "generator_id": "発電機ID",
   "generator_public_key": "公開キーのジェネレーター",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "フィードバックを与える",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "このブロックにはトランザクションがありません。",
   "no_transactions_yet": "トランザクションがまだありません。",
   "non_verified_source": "未知の、潜在的に安全でない情報源",
+  "nonce": "一回だけ",
   "none": "なし",
   "not_delivered_in_time": "時間内に配信されず",
   "not_forging": "鋳造していません",
@@ -647,6 +652,7 @@
   "nr_votes": "投票数",
   "number_of_trades": "取引数",
   "number_of_transactions": "トランザクションの数",
+  "number_transactions": "トランザクション数",
   "numeric_account_id": "数値によるアカウントID",
   "official_hash": "公式ハッシュ",
   "old_browser_warning": "このアプリケーションをサポートしていない古いブラウザーを使用しています。",
@@ -764,6 +770,7 @@
   "returning_user_q": "以前ご利用になられたユーザーですか",
   "reward_recipient": "報酬受取人",
   "same_out": "Same Amount",
+  "scoop_num": "スクープ番号",
   "search_aliases": "エイリアスを検索",
   "search_assets": "資産を検索",
   "search_by_id": "IDで検索",
