--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Generatietijd blokken",
   "block_height": "Blokhoogte",
   "block_id": "ID blokkeren",
+  "block_reward": "Block Reward",
   "block_signature": "Blok handtekening",
   "block_timestamp": "Blok Timestamp",
   "blocks": "Blokken",
+  "blocks_details": "Details blokkeren",
   "bookmark_asset": "Bookmark deze Asset",
   "broadcast": "Uitzenden",
   "broadcast_transaction": "Transactie uitzenden",
@@ -476,6 +478,8 @@
   "generated_token_is": "Het gegenereerde token is:",
   "generation_signature": "Genereer Handtekening",
   "generator": "Generator",
+  "generator_address": "Generator adres",
+  "generator_id": "Generator ID",
   "generator_public_key": "Openbare sleutel van de generator",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Geef Feedback",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Er zijn geen transacties in dit blok.",
   "no_transactions_yet": "Nog geen transacties.",
   "non_verified_source": "Onbekende, potentieel onveilige bron",
+  "nonce": "nonce",
   "none": "Geen",
   "not_delivered_in_time": "Niet op tijd geleverd",
   "not_forging": "Niet aan het smeden",
@@ -647,6 +652,7 @@
   "nr_votes": "# Stemmen",
   "number_of_trades": "Aantal transacties",
   "number_of_transactions": "Aantal transacties",
+  "number_transactions": "Aantal transacties",
   "numeric_account_id": "Numerieke Account-ID",
   "official_hash": "Officiele Hash",
   "old_browser_warning": "U gebruikt een oude browser die deze applicatie niet ondersteunt.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Terugkerende Gebruiker?",
   "reward_recipient": "Beloning Ontvanger",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop nummer",
   "search_aliases": "Zoek Aliassen...",
   "search_assets": "Zoek Asset...",
   "search_by_id": "Zoeken op ID...",
