--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Tempo de Geração do Bloco",
   "block_height": "Altura do bloco",
   "block_id": "ID do bloco",
+  "block_reward": "Bloquear Recompensa",
   "block_signature": "Assinatura do bloco",
   "block_timestamp": "Data do Bloco",
   "blocks": "Blocos",
+  "blocks_details": "Detalhes do Bloco",
   "bookmark_asset": "Adicionar Este Ativo aos Favoritos",
   "broadcast": "Transmitir",
   "broadcast_transaction": "Transmitir a Transação",
@@ -476,6 +478,8 @@
   "generated_token_is": "O token gerado é: ",
   "generation_signature": "Assinatura de geração",
   "generator": "Gerador",
+  "generator_address": "Endereço do Gerador",
+  "generator_id": "ID do gerador",
   "generator_public_key": "Chave pública do gerador",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Comentar",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Não há transações neste bloco.",
   "no_transactions_yet": "Nenhuma transação ainda.",
   "non_verified_source": "Fonte desconhecida e potencialmente insegura",
+  "nonce": "Nonce",
   "none": "Nenhum",
   "not_delivered_in_time": "Não entregue a tempo",
   "not_forging": "Não está forjando",
@@ -647,6 +652,7 @@
   "nr_votes": "# Votos",
   "number_of_trades": "Número de negócios",
   "number_of_transactions": "Número de transações",
+  "number_transactions": "Número de Transações",
   "numeric_account_id": "ID numérico da conta",
   "official_hash": "Hash oficial",
   "old_browser_warning": "Você está usando um navegador antigo, não suportado por este aplicativo.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Já é usuário?",
   "reward_recipient": "Destinatário da recompensa",
   "same_out": "Same Amount",
+  "scoop_num": "Número de colher",
   "search_aliases": "Pesquisar Pseudônimos...",
   "search_assets": "Pesquisar ativos...",
   "search_by_id": "Pesquisar por ID...",
