--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Hora de Geração do Bloco",
   "block_height": "Altura do bloco",
   "block_id": "ID do bloco",
+  "block_reward": "Bloquear Recompensa",
   "block_signature": "Assinatura do Bloco",
   "block_timestamp": "Marca de Tempo do Bloco",
   "blocks": "Blocos",
+  "blocks_details": "Detalhes do Bloco",
   "bookmark_asset": "Adicionar Ativo a Favoritos",
   "broadcast": "Transmitir",
   "broadcast_transaction": "Transmitir Transação",
@@ -476,6 +478,8 @@
   "generated_token_is": "O identificador gerado é:",
   "generation_signature": "Assinatura de Geração",
   "generator": "Gerador",
+  "generator_address": "Endereço do Gerador",
+  "generator_id": "ID do gerador",
   "generator_public_key": "Chave Pública do Gerador",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Deixar Valoração",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Não há transações neste bloco.",
   "no_transactions_yet": "Ainda não há transações.",
   "non_verified_source": "Fonte desconhecida e potencialmente insegura",
+  "nonce": "Nonce",
   "none": "Nenhum",
   "not_delivered_in_time": "Não entregue a tempo",
   "not_forging": "Não está forjando",
@@ -647,6 +652,7 @@
   "nr_votes": "#Votos",
   "number_of_trades": "Número de Operações",
   "number_of_transactions": "Número de Transações",
+  "number_transactions": "Número de Transações",
   "numeric_account_id": "ID de Conta Numérica",
   "official_hash": "Hash Oficial",
   "old_browser_warning": "Você está a usar um navegador antigo não suportado por este aplicativo.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Usuário Existente?",
   "reward_recipient": "Destinatário da recompensa",
   "same_out": "Same Amount",
+  "scoop_num": "Número de colher",
   "search_aliases": "Pesquisa de Aliases...",
   "search_assets": "Pesquisa de Ativos...",
   "search_by_id": "Pesquisar Por ID...",
