--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Timp Generare Bloc",
   "block_height": "Inaltimea blocului",
   "block_id": "Identitatea blocului",
+  "block_reward": "Blocați recompensa",
   "block_signature": "Semnătură Bloc",
   "block_timestamp": "Marcaj dată/oră Bloc",
   "blocks": "Blocuri",
+  "blocks_details": "Blocați detaliile",
   "bookmark_asset": "Marchează Activa",
   "broadcast": "Transmite",
   "broadcast_transaction": "Transmite Tranzacția",
@@ -476,6 +478,8 @@
   "generated_token_is": "Token-ul generat este: ",
   "generation_signature": "Generare semnătură",
   "generator": "Generator",
+  "generator_address": "Adresa generatorului",
+  "generator_id": "ID-ul generatorului",
   "generator_public_key": "Cheia Publică Generator",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Oferiți Feedback",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Nu sunt tranzacţii în acest bloc.",
   "no_transactions_yet": "Încă nu sunt tranzacţii.",
   "non_verified_source": "Sursă necunoscută, potențial nesigură",
+  "nonce": "Nonce",
   "none": "Niciuna",
   "not_delivered_in_time": "Nelivrat la timp",
   "not_forging": "Nu Forjează",
@@ -647,6 +652,7 @@
   "nr_votes": "# Voturi",
   "number_of_trades": "Număr Tranzacţii",
   "number_of_transactions": "Număr Tranzacţii",
+  "number_transactions": "Numărul de tranzacții",
   "numeric_account_id": "ID cont numeric",
   "official_hash": "Hash Oficial",
   "old_browser_warning": "Utilizezi un browser vechi neacceptat de această aplicaţie.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Deja înregistrat?",
   "reward_recipient": "Recipient Recompensă",
   "same_out": "Same Amount",
+  "scoop_num": "Numărul de bucăți",
   "search_aliases": "Căutare alias-uri...",
   "search_assets": "Căutare Active...",
   "search_by_id": "Căutare după ID...",
