--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Время генерации блока",
   "block_height": "Высота блока",
   "block_id": "Блок ID",
+  "block_reward": "Вознаграждение за блок",
   "block_signature": "Подпись блока",
   "block_timestamp": "Отметка времени блока",
   "blocks": "Блоки",
+  "blocks_details": "Детали блока",
   "bookmark_asset": "Добавить в закладки этот актив",
   "broadcast": "Трансляция",
   "broadcast_transaction": "Послать Транзакцию",
@@ -476,6 +478,8 @@
   "generated_token_is": "Сгенерированный токен:",
   "generation_signature": "Создание подписи",
   "generator": "Генератор",
+  "generator_address": "Адрес генератора",
+  "generator_id": "Идентификатор генератора",
   "generator_public_key": "Генератор открытого ключа",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Омтавить отзыв",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "В этом блоке нет транзакций.",
   "no_transactions_yet": "Еще нет транзакций.",
   "non_verified_source": "Неизвестный, потенциально небезопасный источник",
+  "nonce": "данное время",
   "none": "Не найдено.",
   "not_delivered_in_time": "Не доставлено вовремя",
   "not_forging": "Нет Форжинга",
@@ -647,6 +652,7 @@
   "nr_votes": "# Голосовать",
   "number_of_trades": "Количество сделок",
   "number_of_transactions": "Количество транзакций",
+  "number_transactions": "Количество транзакций",
   "numeric_account_id": "Числовой идентификатор аккаунта",
   "official_hash": "Официальный хэш",
   "old_browser_warning": "Вы используете старый браузер, не поддерживающий это приложение.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Зарегистрированный пользователь?",
   "reward_recipient": "Получатель вознаграждения",
   "same_out": "Same Amount",
+  "scoop_num": "Номер совка",
   "search_aliases": "Поиск Псевдонимов...",
   "search_assets": "Поиск активов...",
   "search_by_id": "Поиск по ID...",
