--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Doba vygenerovania bloku",
   "block_height": "Výška bloku",
   "block_id": "ID bloku",
+  "block_reward": "Blok Odmena",
   "block_signature": "Podpis bloku",
   "block_timestamp": "Časová pečiatka bloku",
   "blocks": "Bloky",
+  "blocks_details": "Detaily bloku",
   "bookmark_asset": "Pridať medzi záložky tento majetok",
   "broadcast": "Poslať",
   "broadcast_transaction": "Poslať transakciu",
@@ -476,6 +478,8 @@
   "generated_token_is": "Generovaný token je:",
   "generation_signature": "Generovanie podpisu",
   "generator": "Generátor",
+  "generator_address": "Adresa generátora",
+  "generator_id": "ID generátora",
   "generator_public_key": "Generátor verejného kľúča",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Poskytnúť spätnú väzbu",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Žiadne transakcie v tomto bloku.",
   "no_transactions_yet": "Zatiaľ žiadne transakcie.",
   "non_verified_source": "Neznámy, potenciálne nezabezpečený zdroj",
+  "nonce": "nonce",
   "none": "Žiadne",
   "not_delivered_in_time": "Nedoručené včas",
   "not_forging": "Nekuje",
@@ -647,6 +652,7 @@
   "nr_votes": "# Hlasov",
   "number_of_trades": "Počet obchodov",
   "number_of_transactions": "Počet transakcií",
+  "number_transactions": "Počet transakcií",
   "numeric_account_id": "Číselné ID účtu",
   "official_hash": "Oficiálny Hash",
   "old_browser_warning": "Používate starý prehliadač, ktorý táto aplikácia nepodporuje.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Opätovný používateľ?",
   "reward_recipient": "Príjemca odmeny",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop Number",
   "search_aliases": "Hľadať aliasy...",
   "search_assets": "Hľadať majetok...",
   "search_by_id": "Hľadať podľa ID...",
