--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Час генерації Блока",
   "block_height": "Висота блоку",
   "block_id": "Ідентифікатор блоку",
+  "block_reward": "Блокувати винагороду",
   "block_signature": "Підпис Блоку",
   "block_timestamp": "Відмітка часу блоку",
   "blocks": "Блоки",
+  "blocks_details": "Деталі блоку",
   "bookmark_asset": "Додати в закладки цей актив",
   "broadcast": "Трансляція",
   "broadcast_transaction": "Послати Транзакцію",
@@ -476,6 +478,8 @@
   "generated_token_is": "Згенерований маркер є:",
   "generation_signature": "Створення підпису",
   "generator": "Генератор",
+  "generator_address": "Адреса генератора",
+  "generator_id": "ID генератора",
   "generator_public_key": "Генератор Відкритого ключа",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Надання відгуку",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "У цьому блоці немає транзакцій.",
   "no_transactions_yet": "Ще немає транзакцій.",
   "non_verified_source": "Невідомий, потенційно небезпечний джерело",
+  "nonce": "Nonce",
   "none": "Не знайдено",
   "not_delivered_in_time": "Не доставлено вчасно",
   "not_forging": "Форжинга нема",
@@ -647,6 +652,7 @@
   "nr_votes": "# Голосів",
   "number_of_trades": "Кількість Угод",
   "number_of_transactions": "Кількість транзакцій",
+  "number_transactions": "Кількість операцій",
   "numeric_account_id": "Числовий ідентифікатор аккаунта",
   "official_hash": "Офіційний хеш",
   "old_browser_warning": "Ви користуєтесь старим броузером, ця програма не підтримується.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Зареєстрований Користувач?",
   "reward_recipient": "Одержувач нагороди",
   "same_out": "Same Amount",
+  "scoop_num": "Номер Scoop",
   "search_aliases": "Пошук Аліасiв...",
   "search_assets": "Пошук активів...",
   "search_by_id": "Пошук по ID...",
