--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -99,9 +99,11 @@
   "block_generation_time": "区块生成时间",
   "block_height": "阻挡高度",
   "block_id": "块ID",
+  "block_reward": "阻止奖励",
   "block_signature": "区块签名",
   "block_timestamp": "区块时间戳",
   "blocks": "区块",
+  "blocks_details": "阻止细节",
   "bookmark_asset": "将该资产加入书签",
   "broadcast": "广播",
   "broadcast_transaction": "广播交易",
@@ -476,6 +478,8 @@
   "generated_token_is": "生成的令牌是：",
   "generation_signature": "生成签名",
   "generator": "产生者",
+  "generator_address": "发电机地址",
+  "generator_id": "生成器ID",
   "generator_public_key": "生成公钥",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "给出反馈",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "该区块中没有交易。",
   "no_transactions_yet": "没有交易记录。",
   "non_verified_source": "未知，可能不安全的来源",
+  "nonce": "杜撰",
   "none": "无",
   "not_delivered_in_time": "未按时交付",
   "not_forging": "未锻造",
@@ -647,6 +652,7 @@
   "nr_votes": "# 投票",
   "number_of_trades": "交易数目",
   "number_of_transactions": "交易次数",
+  "number_transactions": "交易数量",
   "numeric_account_id": "数字账户 ID",
   "official_hash": "官方哈希",
   "old_browser_warning": "您正在使用的浏览器版本过低，不支持该应用。",
@@ -764,6 +770,7 @@
   "returning_user_q": "返回的用户？",
   "reward_recipient": "奖励收件人",
   "same_out": "Same Amount",
+  "scoop_num": "铲号",
   "search_aliases": "搜索别名...",
   "search_assets": "搜索资产...",
   "search_by_id": "搜索 ID...",
