--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -99,9 +99,11 @@
   "block_generation_time": "χρόνος δημιουργίας Μπλοκ",
   "block_height": "Ύψος μπλοκ",
   "block_id": "Αναγνωριστικό μπλοκ",
+  "block_reward": "Αποκλεισμός ανταμοιβής",
   "block_signature": "Block Signature",
   "block_timestamp": "Block Timestamp",
   "blocks": "Μπλοκ",
+  "blocks_details": "Αποκλεισμός στοιχείων",
   "bookmark_asset": "Σελιδοδείκτης αυτής της μετοχής",
   "broadcast": "μετάδοση",
   "broadcast_transaction": "Κοινοποίηση συναλλαγής",
@@ -476,6 +478,8 @@
   "generated_token_is": "The generated token is:",
   "generation_signature": "Υπογραφή δημιουργίας",
   "generator": "Γεννήτρια",
+  "generator_address": "Διεύθυνση γεννήτριας",
+  "generator_id": "Αναγνωριστικό γεννήτριας",
   "generator_public_key": "Generator Public Key",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Θέλετε να δώσετε αξιολόγηση;",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "No transactions in this block.",
   "no_transactions_yet": "Δεν υπάρχουν συναλλαγές ακόμα.",
   "non_verified_source": "Άγνωστη, δυνητικά ανασφαλής πηγή",
+  "nonce": "Μην",
   "none": "Τίποτα",
   "not_delivered_in_time": "Δεν παραδόθηκε εγκαίρως",
   "not_forging": "Not Forging",
@@ -647,6 +652,7 @@
   "nr_votes": "# Ψηφοφορίες",
   "number_of_trades": "Αριθμός συναλλαγών",
   "number_of_transactions": "Number of Transactions",
+  "number_transactions": "Αριθμός συναλλαγών",
   "numeric_account_id": "Αριθμητικό ID λογαριασμού",
   "official_hash": "Official Hash",
   "old_browser_warning": "You are using an old Internet Explorer. Please update your IE or open localhost:8125 with your favorite Browser!",
@@ -764,6 +770,7 @@
   "returning_user_q": "Επιστροφή χρήστη;",
   "reward_recipient": "Ανταμοιβή παραλήπτη",
   "same_out": "Same Amount",
+  "scoop_num": "Αριθμός Scoop",
   "search_aliases": "Search Aliases...",
   "search_assets": "Search Assets...",
   "search_by_id": "Αναζήτηση μέσω ταυτότητας...",
