--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Block Generation Time",
   "block_height": "Block Height",
   "block_id": "Block ID",
+  "block_reward": "Block Reward",
   "block_signature": "Block Signature",
   "block_timestamp": "Block Timestamp",
   "blocks": "Blocks",
+  "blocks_details": "Block Details",
   "bookmark_asset": "Bookmark This Asset",
   "broadcast": "Broadcast",
   "broadcast_transaction": "Broadcast Transaction",
@@ -476,6 +478,8 @@
   "generated_token_is": "The generated token is:",
   "generation_signature": "Generation Signature",
   "generator": "Generator",
+  "generator_address": "Generator Address",
+  "generator_id": "Generator ID",
   "generator_public_key": "Generator Public Key",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Give Feedback",
@@ -634,6 +638,7 @@
   "no_transactions_in_block": "No transactions in this block.",
   "no_transactions_yet": "No transactions yet.",
   "non_verified_source": "Unknown, potentially insecure source",
+  "nonce": "Nonce",
   "none": "None",
   "not_delivered_in_time": "Not delivered in time",
   "not_forging": "Not Forging",
@@ -656,6 +661,7 @@
   "nr_votes": "# Votes",
   "number_of_trades": "Number of Trades",
   "number_of_transactions": "Number of Transactions",
+  "number_transactions": "Number of Transactions",
   "numeric_account_id": "Numeric Account ID",
   "official_hash": "Official Hash",
   "old_browser_warning": "You are using an old Internet Explorer. Please update your IE or open localhost:8125 with your favorite Browser!",
@@ -773,6 +779,7 @@
   "returning_user_q": "Returning User?",
   "reward_recipient": "Reward Recipient",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop Number",
   "search_aliases": "Search Aliases...",
   "search_assets": "Search Assets...",
   "search_by_id": "Search By ID...",
