--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Lohkon luontiaika",
   "block_height": "Estä korkeus",
   "block_id": "Estä tunnus",
+  "block_reward": "Estä palkinto",
   "block_signature": "Lohkon allekirjoitus",
   "block_timestamp": "Lohkon aikaleima",
   "blocks": "Lohkot",
+  "blocks_details": "Estä tiedot",
   "bookmark_asset": "Kirjanmerkki tästä arvopaperista",
   "broadcast": "Lähetys",
   "broadcast_transaction": "Lähetä tapahtuma",
@@ -476,6 +478,8 @@
   "generated_token_is": "Luotu tunnus on:",
   "generation_signature": "Luonnin allekirjoitus",
   "generator": "Luoja",
+  "generator_address": "Generaattorin osoite",
+  "generator_id": "Generaattorin tunnus",
   "generator_public_key": "Luojan julkinen avain",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Anna palautetta",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Ei tapahtumia tässä lohkossa.",
   "no_transactions_yet": "Ei tilitapahtumia.",
   "non_verified_source": "Tuntematon, mahdollisesti turvaton lähde",
+  "nonce": "seksuaalirikollinen",
   "none": "Ei mitään",
   "not_delivered_in_time": "Ei toimitettu ajoissa",
   "not_forging": "Ei taontaa",
@@ -647,6 +652,7 @@
   "nr_votes": "# Äänet",
   "number_of_trades": "Kauppojen lukumäärä",
   "number_of_transactions": "Tapahtumien määrä",
+  "number_transactions": "Tapahtumien lukumäärä",
   "numeric_account_id": "Numeerinen tilinumero",
   "official_hash": "Virallinen tarkiste",
   "old_browser_warning": "Käytät vanhaa selainta, jota tämä sovellus ei tue.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Vanha käyttäjä?",
   "reward_recipient": "Palkinnon saaja",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop-numero",
   "search_aliases": "Hae aliasta...",
   "search_assets": "Etsi arvopaperia...",
   "search_by_id": "Hae ID:llä...",
