--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Waktu untuk Menghasilkan Blok",
   "block_height": "Tinggi Blok",
   "block_id": "Blokir ID",
+  "block_reward": "Blokir Hadiah",
   "block_signature": "Blok tanda tangan",
   "block_timestamp": "Blok Timestamp",
   "blocks": "Blok-blok",
+  "blocks_details": "Detail Blokir",
   "bookmark_asset": "Bookmark ini aset",
   "broadcast": "Siaran",
   "broadcast_transaction": "Siarkan transaksi",
@@ -476,6 +478,8 @@
   "generated_token_is": "Token yang dihasilkan adalah:",
   "generation_signature": "Generasi Menandatangani",
   "generator": "Generator",
+  "generator_address": "Alamat Generator",
+  "generator_id": "ID Generator",
   "generator_public_key": "Generator Kunci Publik",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Berikan umpan balik",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Tidak ada transaksi dalam blok ini.",
   "no_transactions_yet": "Belum ada transaksi.",
   "non_verified_source": "Sumber tidak dikenal, berpotensi tidak aman",
+  "nonce": "Nonce",
   "none": "Tidak ada",
   "not_delivered_in_time": "Tidak dikirim tepat waktu",
   "not_forging": "Tidak penyusunan",
@@ -647,6 +652,7 @@
   "nr_votes": "# Suara",
   "number_of_trades": "Jumlah transaksi",
   "number_of_transactions": "Jumlah transaksi",
+  "number_transactions": "Jumlah Transaksi",
   "numeric_account_id": "ID Rekening Numerik",
   "official_hash": "Hash resmi",
   "old_browser_warning": "Anda menggunakan browser lama yang tidak mendukung aplikasi ini.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Kembali pengguna?",
   "reward_recipient": "Penerima Hadiah",
   "same_out": "Same Amount",
+  "scoop_num": "Jumlah sendok",
   "search_aliases": "Alias Cari...",
   "search_assets": "Cari Aset...",
   "search_by_id": "Cari berdasarkan ID...",
