--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Tempo generazione blocco",
   "block_height": "Block Height",
   "block_id": "ID blocco",
+  "block_reward": "Ricompensa del blocco",
   "block_signature": "Firma del blocco",
   "block_timestamp": "Timestamp Blocco",
   "blocks": "Blocchi",
+  "blocks_details": "Dettagli del blocco",
   "bookmark_asset": "Aggiungi questo Asset ai preferiti",
   "broadcast": "Trasmissione",
   "broadcast_transaction": "Trasmetti la transazione",
@@ -476,6 +478,8 @@
   "generated_token_is": "Il token generato è:",
   "generation_signature": "Firma di generazione",
   "generator": "Generatore",
+  "generator_address": "Indirizzo del generatore",
+  "generator_id": "ID generatore",
   "generator_public_key": "Generatore della Chiave Pubblica",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Lascia un Feedback",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Nessuna transazione in questo blocco.",
   "no_transactions_yet": "Ancora nessuna transazione.",
   "non_verified_source": "Fonte sconosciuta, potenzialmente insicura",
+  "nonce": "nonce",
   "none": "None",
   "not_delivered_in_time": "Non consegnato in tempo",
   "not_forging": "Forgiatura arrestata",
@@ -647,6 +652,7 @@
   "nr_votes": "# Voti",
   "number_of_trades": "Numero di operazioni",
   "number_of_transactions": "Numero di transazioni",
+  "number_transactions": "Numero di transazioni",
   "numeric_account_id": "Numeric Account ID",
   "official_hash": "Hash ufficiale",
   "old_browser_warning": "Stai utilizzando un vecchio browser che questa applicazione non supporta.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Utente già registrato?",
   "reward_recipient": "Ricompensa",
   "same_out": "Same Amount",
+  "scoop_num": "Numero del mestolo",
   "search_aliases": "Ricerca alias...",
   "search_assets": "Ricerca Asset...",
   "search_by_id": "Ricerca per ID...",
