--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Bloko generavimo laikas",
   "block_height": "Blokuoti aukštį",
   "block_id": "Blokuoti ID",
+  "block_reward": "Blokuoti atlygį",
   "block_signature": "Bloko parašas",
   "block_timestamp": "Bloko laiko žyma",
   "blocks": "Blokai",
+  "blocks_details": "Blokuoti duomenis",
   "bookmark_asset": "Įdėti aktyvą į mėgstamų žymę",
   "broadcast": "Transliuoti",
   "broadcast_transaction": "Transliuoti transakciją",
@@ -476,6 +478,8 @@
   "generated_token_is": "Sukurtas atpažinimo ženklas yra:",
   "generation_signature": "Generation Signature",
   "generator": "Generatorius",
+  "generator_address": "Generatoriaus adresas",
+  "generator_id": "Generatoriaus ID",
   "generator_public_key": "Viešojo rakto generatorius",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Pateikti atsiliepimus",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "Nėra transakcijų šiame bloke.",
   "no_transactions_yet": "Nėra jokių transakcijų dar.",
   "non_verified_source": "Nežinomas, galbūt nesaugus šaltinis",
+  "nonce": "Nonce",
   "none": "Nėra",
   "not_delivered_in_time": "Nepristatyta laiku",
   "not_forging": "Kalimas\" nevyksta",
@@ -647,6 +652,7 @@
   "nr_votes": "# Balsai",
   "number_of_trades": "Sandorių skaičiaus",
   "number_of_transactions": "Transakcijų skaičius",
+  "number_transactions": "Sandorių skaičius",
   "numeric_account_id": "Skaitinis sąskaitos ID",
   "official_hash": "Oficialus \"hash",
   "old_browser_warning": "Jūs naudojate seną naršyklę, kuri nepalaiko šios taikomosios programos.",
@@ -764,6 +770,7 @@
   "returning_user_q": "Esamas vartotojas?",
   "reward_recipient": "Atlygis Gavėjas",
   "same_out": "Same Amount",
+  "scoop_num": "Scoop skaičius",
   "search_aliases": "Ieškoti pseudonimų...",
   "search_assets": "Ieškoti aktyvų...",
   "search_by_id": "Paieška pagal ID...",
