--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Czas wynegerowania bloku",
   "block_height": "Wysokość bloku",
   "block_id": "ID bloku",
+  "block_reward": "Zablokuj nagrodę",
   "block_signature": "Sygnatura bloku",
   "block_timestamp": "Timestamp bloku",
   "blocks": "Bloki",
+  "blocks_details": "Szczegóły bloku",
   "bookmark_asset": "Dodaj aktywo do zakładek",
   "broadcast": "Broadcast",
   "broadcast_transaction": "Broadcast transakcji",
@@ -476,6 +478,8 @@
   "generated_token_is": "Wygenerowany token:",
   "generation_signature": "Generowanie sygnatury",
   "generator": "Generator",
+  "generator_address": "Adres generatora",
+  "generator_id": "Identyfikator generatora",
   "generator_public_key": "Generator klucza publicznego",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Zostaw wiadomość zwrotną",
@@ -634,6 +638,7 @@
   "no_transactions_in_block": "Blok nie zawiera transakcji.",
   "no_transactions_yet": "Nie ma jeszcze transakcji.",
   "non_verified_source": "Nieznane, potencjalnie niebezpieczne źródło",
+  "nonce": "Chwilowo",
   "none": "Żaden",
   "not_delivered_in_time": "Nie dostarczone na czas",
   "not_forging": "Nie jest Forging",
@@ -656,6 +661,7 @@
   "nr_votes": "# Głosów",
   "number_of_trades": "Ilość wykonanych zleceń",
   "number_of_transactions": "Ilość transakcji",
+  "number_transactions": "Liczba transakcji",
   "numeric_account_id": "ID numeryczne konta",
   "official_hash": "Oficjalny hash",
   "old_browser_warning": "Używasz starej wersji IE. Aktualizuj IE lub idź do localhost:8125 używając innej przeglądarki!",
@@ -773,6 +779,7 @@
   "returning_user_q": "Powracający użytkownik?",
   "reward_recipient": "Odbiorca nagrody",
   "same_out": "Ta sama ilość",
+  "scoop_num": "Numer miarki",
   "search_aliases": "Szukaj Aliasu...",
   "search_assets": "Szukaj Aktywa...",
   "search_by_id": "Szukaj wg ID...",
