--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -99,9 +99,11 @@
   "block_generation_time": "Blok oluşum süresi",
   "block_height": "Blok Yüksekliği",
   "block_id": "Blok kimliği",
+  "block_reward": "Blok Ödül",
   "block_signature": "Blok imzası",
   "block_timestamp": "Block Timestamp",
   "blocks": "Bloklar",
+  "blocks_details": "Blok Detayları",
   "bookmark_asset": "Bu kripto-kıymeti favorilere ekle",
   "broadcast": "Yayın",
   "broadcast_transaction": "İşlemi yayınla",
@@ -476,6 +478,8 @@
   "generated_token_is": "The generated token is:",
   "generation_signature": "Generation Signature",
   "generator": "Generator",
+  "generator_address": "Jeneratör Adresi",
+  "generator_id": "Jeneratör Kimliği",
   "generator_public_key": "Generator Public Key",
   "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Give Feedback",
@@ -625,6 +629,7 @@
   "no_transactions_in_block": "No transactions in this block.",
   "no_transactions_yet": "No transactions yet.",
   "non_verified_source": "Bilinmeyen, potansiyel olarak güvensiz kaynak",
+  "nonce": "şimdiki zaman",
   "none": "None",
   "not_delivered_in_time": "Zamanında teslim edilemedi",
   "not_forging": "Not Forging",
@@ -647,6 +652,7 @@
   "nr_votes": "# Oylama",
   "number_of_trades": "Number of Trades",
   "number_of_transactions": "İşlem sayısı",
+  "number_transactions": "İşlem Sayısı",
   "numeric_account_id": "Numeric Account ID",
   "official_hash": "Resmi Hash",
   "old_browser_warning": "You are using an old Internet Explorer. Please update your IE or open localhost:8125 with your favorite Browser!",
@@ -764,6 +770,7 @@
   "returning_user_q": "Returning User?",
   "reward_recipient": "Ödül Alıcısı",
   "same_out": "Same Amount",
+  "scoop_num": "Kepçe Numarası",
   "search_aliases": "Search Aliases...",
   "search_assets": "Search Assets...",
   "search_by_id": "Search By ID...",
